--- a/TrabajoFinal_Grupo18/pom.xml
+++ b/TrabajoFinal_Grupo18/pom.xml
@@ -19,10 +19,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
@@ -41,6 +37,42 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-java8time</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>5.1.3</version>
+        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+        <dependency>
+       <groupId>org.webjars</groupId>
+       <artifactId>jquery</artifactId>
+       <version>3.6.0</version>
+       </dependency>
+	   <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
+       <dependency>
+       <groupId>org.webjars</groupId>
+       <artifactId>webjars-locator</artifactId>
+       <version>0.45</version>
+       </dependency>
+       <dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
