--- a/TrabajoFinal_Grupo18/src/main/resources/application.properties
+++ b/TrabajoFinal_Grupo18/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8080
 
 sprint.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -15,6 +15,5 @@ spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #iniciar el esquema 
 spring.jpa.generate-ddl = true
 #permite realizar la creacion y eliminacion de las tablas
-spring.jpa.hibernate.ddl-auto= create-drop
-#spring.jpa.hibernate.ddl-auto= update
-
+#spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
