--- a/TrabajoFinal_Grupo18/src/main/resources/application.properties
+++ b/TrabajoFinal_Grupo18/src/main/resources/application.properties
@@ -15,10 +15,6 @@ spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #iniciar el esquema 
 spring.jpa.generate-ddl = true
 #permite realizar la creacion y eliminacion de las tablas
-<<<<<<< HEAD
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
+#spring.jpa.hibernate.ddl-auto= update
 
-=======
-#spring.jpa.hibernate.ddl-auto= create-drop
-spring.jpa.hibernate.ddl-auto= update
->>>>>>> branch 'master' of https://github.com/Marco21c/TrabajoFinal_Grupo18.git
