--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,13 @@
+# Puerto del servidor
 server.port=8080
 
-sprint.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Base de datos H2 (en memoria)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-#Url para la conectar la base de datos
-spring.datasource.url = jdbc:mysql://localhost:3306/trabajofinal_grupo18?serverTimezone=UTC
-#usuario y password
-spring.datasource.username= root
-spring.datasource.password= root
-#log para mostrar sentencias sql
-spring.jpa.show-sql = true
-spring.jpa.open-in-view=false
-#definir my sql dialect
-spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
-#iniciar el esquema 
-spring.jpa.generate-ddl = true
-#permite realizar la creacion y eliminacion de las tablas
-#spring.jpa.hibernate.ddl-auto= create-drop
-spring.jpa.hibernate.ddl-auto= update
-
+# Configuracion JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
